<package format="2">
  <name>mocap4ros2_camera_test</name>
  <version>0.0.1</version>
  <description>
     This is a ROS2 node that creates random markers to test the drivers from VICON motion capture systems.
  </description>
  <author>Lorena Bajo</author>
  <maintainer email="lorena.bajo@urjc.es">Lorena Bajo</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>mocap_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_export_depend>rclcpp</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
